Bug 154210 - F1 (Help) for Navigator context menu for Headings not linked to relevant help pages
Summary: F1 (Help) for Navigator context menu for Headings not linked to relevant help...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Documentation (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Olivier Hallot
URL:
Whiteboard: target:7.6.0 target:24.2.0
Keywords:
Depends on:
Blocks: Help-Link
  Show dependency treegraph
 
Reported: 2023-03-15 17:36 UTC by sdc.blanco
Modified: 2023-08-03 16:16 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sdc.blanco 2023-03-15 17:36:11 UTC
In the Headings section of Navigator, put cursor on a heading, right-click, select any option and press F1. 

Actual:  404 error

sometimes with  .help:index
sometimes with   modules/swriter/ui/navigatorcontextmenu/(number)

Most (if not all) should probably be going to https://help.libreoffice.org/7.6/en-US/text/swriter/01/02110000.html
Comment 1 Commit Notification 2023-05-13 14:41:39 UTC
Olivier Hallot committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/afa422b963d6b3677165dd8050286431652a815c

tdf#154210 Review Navigator Help page
Comment 2 Rafael Lima 2023-08-03 00:31:30 UTC
This patch in the "core" repo adds the HIDs to the entries in submenus of the navigator context menu:

https://gerrit.libreoffice.org/c/core/+/155049

And this patch in the "help" adds the target HIDs:

https://gerrit.libreoffice.org/c/help/+/155242
Comment 3 Commit Notification 2023-08-03 09:17:52 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/help/commit/2b9431287ea5b01b4f854c9363d6250bcfc1f767

tdf#154210 Add target HIDs in the Navigator help page
Comment 4 Commit Notification 2023-08-03 16:16:08 UTC
Rafael Lima committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/490cf5393d30dd2e9ab201286ef863b3c266a8b4

tdf#154210 Add help IDs for the Navigator context menu

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.