tdf#154210 Add help IDs for the Navigator context menu

This patch adds the missing HIDs for all entries in submenus of the context menu in the Navigator. The entries in the main level already work.

For this patch to work, the related patch in the "help" repo needs to be accepted to create the target HIDs.

Change-Id: Ic5917ce16a1430c6f7031ea6b9eb71a09f52624a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/155049
Tested-by: Jenkins
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Reviewed-by: Rafael Lima <rafael.palma.lima@gmail.com>